css and html changes

--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,35 @@
             <div class="content-container container">
               <div class="content">
                 <h1 class="mb-5">Lets get in touch! </h1>
+                <div class="row">
+                    <div class="col-md-8">
+                      <form
+                        action="https://formspree.io/f/mwkalajy"
+                        method="POST"
+                        class="border p-3 rounded mb-3"
+                      >
+                        <div class="mb-3">
+                          <label class="form-label"> Your email: </label>
+                          <input
+                            type="email"
+                            name="_replyto"
+                            class="form-control"
+                            required
+                            autofocus
+                          />
+                        </div>
+                        <div class="mb-3">
+                          <label class="form-label"> Your message: </label>
+                          <textarea
+                            name="message"
+                            class="form-control"
+                            required
+                          ></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-branding">Send</button>
+                      </form>
+                    </div> 
+        <div class="col-md-4">            
      <h3>Email</h3>
      <p>
       <a href="mailto:thadya4@gmail.com"> thadya4@gmail.com</a>
@@ -75,6 +104,11 @@
      <h3>Instagram</h3>
      <p><a href="https://www.Instagram.com/thadya-graham" target="_blank">@thadya_graham</a>
     </p>
+</div>
+</div>
+</div>
+</div>
+
     <footer class="container">
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
@@ -105,3 +139,5 @@
              
               </p>
        </footer>
+       </body>
+       </html>
