--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="hero">
         <p>👋 Hello, I am</p>
         <h1>Thato Gumbo</h1>
-        <h2 class="mb-5">Front-end developer based in London</h2>
+        <h2 class="mb-5">A helpdesk supporter based in London</h2>
         <div>
           <a href="/contact.html" class="btn btn-branding">Contact me</a>
         </div>
